[project]
name = "ebcdic"
description = "Additional EBCDIC codecs"
keywords = ["codec", "text", "unicode", "ebcdic"]
readme = "README.rst"
authors = [
    { name = "Thomas Aglassinger", email = "roskakori@users.sourceforge.net" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "BSD-2-Clause"
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
Homepage = "https://pypi.python.org/pypi/ebcdic"

[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"
